# das.sdss.org

./: .gitignore  Makefile  Makefile.am  Makefile.in  config.status  grepp.txt  sdssdas.conf
cgi-bin/: dl_request_form  download-list  drC  fiber  field  fieldx  imlist  post_fibers  post_fields  segments  spdl_request_form  spdownload_list  splist  wholeseg
etc/: sdssdas.conf
html/: Makefile  post_coords.html  post_fibers.html  post_fields.html  robots.txt
html/manual/: admin-manual.html  dataProcessing.html  fileList.md5
html/www/css/: fileList.md5  manual.css  sdssdas.css
html/www/html/: 404.html  altfootprint.html  das2.html  fileList.md5  post_coords.html  post_fibers.html  post_fields.html  volume.html  volume.org
html/www/html/dm/: .paradigm  Makefile  fileList.md5
html/www/html/dm/app/: .cvsignore  Makefile  fileList.md5  out.ps   sdss.app  sdss.cdf  sdss.dbd  sdss.grp  sdss.key  sdss.lnk  sdss01.dgm  sdss02.dgm  sdss03.dgm  sdss06.dgm  sdss10.dgm  sdss11.dgm  (+8 more)
html/www/html/imaging/: dr-10.html  dr-11.html  dr-20.html  dr-21.html  dr-30.html  dr-31.html  dr-40.html  dr-41.html  dr-50.html  dr-51.html  dr-60.html  dr-61.html  dr-70.html  dr-71.html  dr-72.html  dr-73.html  dr-74.html  dr-75.html  dr-75.html~  dr-76.html  dr-99.html  dr-byRun-10.html  dr-byRun-11.html  dr-byRun-20.html  dr-byRun-21.html  dr-byRun-30.html  dr-byRun-31.html  dr-byRun-40.html  dr-byRun-41.html  dr-byRun-50.html  dr-byRun-51.html  dr-byRun-60.html  dr-byRun-61.html  dr-byRun-70.html  dr-byRun-71.html  dr-byRun-72.html  dr-byRun-73.html  dr-byRun-74.html  dr-byRun-76.html  dr-byRun-99.html  (+1 more)
html/www/html/manual/: admin-manual.html  das_quickref.html  dataProcessing.html  fileList.md5  svg-generation-note.txt
html/www/html/nightly/: fileList.md5  index.html  index.html~  night-50991.html  night-51075.html  night-51078.html  night-51081.html  night-51115.html  night-51132.html  night-51133.html  night-51134.html  night-51135.html  night-51136.html  night-51138.html  night-51139.html  night-51140.html  night-51201.html  night-51203.html  night-51204.html  night-51205.html  night-51219.html  night-51220.html  night-51221.html  night-51222.html  night-51223.html  night-51225.html  night-51226.html  night-51227.html  night-51228.html  night-51229.html  night-51230.html  night-51231.html  night-51232.html  night-51233.html  night-51234.html  night-51249.html  night-51251.html  night-51252.html  night-51253.html  night-51254.html  (+2647 more)
html/www/html/spectro/: allPlates-25.html  allPlates-26.html  dr2index.html  dr3index.html  dr4index.html  dr5index.html  dr6index.html  fileList.md5  plate-1000-52643-25.html  plate-1000-52643-26.html  plate-1001-52670-25.html  plate-1001-52670-26.html  plate-1002-52646-25.html  plate-1002-52646-26.html  plate-1003-52641-25.html  plate-1003-52641-26.html  plate-1004-52723-25.html  plate-1004-52723-26.html  plate-1005-52703-25.html  plate-1005-52703-26.html  plate-1006-52708-25.html  plate-1006-52708-26.html  plate-1007-52706-25.html  plate-1007-52706-26.html  plate-1008-52707-25.html  plate-1008-52707-26.html  plate-1009-52644-25.html  plate-1009-52644-26.html  plate-1010-52649-25.html  plate-1010-52649-26.html  plate-1011-52652-25.html  plate-1011-52652-26.html  plate-1012-52649-25.html  plate-1012-52649-26.html  plate-1013-52707-25.html  plate-1013-52707-26.html  plate-1014-52707-26.html  plate-1015-52709-26.html  plate-1015-52734-25.html  plate-1015-52734-26.html  (+4802 more)
include/: Makefile  brittle_fits.h  coord_xform.h  das_config.h  file_readable.h  post_utils.h  segment_table.h  segmentlist_table.h  spectro_post.h
opt/cfitsio/lib/pkgconfig/: cfitsio.pc
sdssdrc-1.1/: INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  addKeywords.c  config.h  config.h.in  configure  configure.in  drC.c  recover_fpC.c  replace_hcard.c
src/: Makefile  checked_link.c  das_config.c  dl_request_form  download-list  fiber  field  fieldx  find_fields.c  imlist  merge_segments.c  post_coords  post_coords.c  post_fibers  post_fields  post_utils.c  read_segment.c  sdssdas-2.2.tgz  sdssdrc-1.1.tgz  segment_list.c  segment_table.c  segments  spdl_request_form  spdl_request_form.c  spdownload_list  spdownload_list.c  splist  splist.c  wholeseg
src/.deps/: checked_link.Po  file_readable.Po  find_fields.Po  imlist.Po  post_utils.Po  segment_list.Po  segment_table.Po  segments.Po  spdownload_list.Po  splist.Po  wholeseg.Po
src/sdssdas-2.2/: AUTHORS  INSTALL  Makefile  README  aclocal.m4  config.status  configure  configure.ac
src/sdssdas-2.2/html/: Makefile  Makefile.am  Makefile.in  das2.html  post_coords.html  post_fibers.html
src/sdssdas-2.2/include/: Makefile  Makefile.am  Makefile.in  checked_link.h  find_fields.h  foot_post.h  merge_segments.h  seglist_overlap.h  segment_list.h  segments.h
src/sdssdas-2.2/src/: Makefile  Makefile.am  Makefile.in  brittle_fits.c  coord_xform.c  dl_request_form  dl_request_form.c  download-list  download-list.c  fiber.c  field.c  fieldx  fieldx.c  file_readable.c  imlist  imlist.c  post_coords  post_fibers  post_fibers.c  post_fields  post_fields.c  seglist_overlap.c  segmentlist_table.c  segments  segments.c  spdl_request_form  spdownload_list  splist  wholeseg.c
src/sdssdas-2.2/src/.deps/: brittle_fits.Po  coord_xform.Po  das_config.Po  dl_request_form.Po  download-list.Po  fiber.Po  field.Po  fieldx.Po  merge_segments.Po  post_coords.Po  post_fibers.Po  post_fields.Po  read_segment.Po  seglist_overlap.Po  segmentlist_table.Po  spdl_request_form.Po
src/sdssdas-2.2/test/: Makefile  Makefile.in
src/sdssdas-2.2/test/data/: Makefile  Makefile.am  Makefile.in  asTrans-003836.fit  coords.tsv  das1.conf  overlap.tsv  print_das_config.out  reflist.tsv  tsField-003836-3-41-0257.fit  unsorted_segments.tsv  userlist.tsv
src/sdssdas-2.2/test/src/: Makefile  Makefile.am  Makefile.in  brittle_fitscell.c  brittle_hdrint.c  fileReadable.c  gc2eq.c  merge_segment_pipe.c  print_das_config.c  raDecToField.c  raDecToXY.c
test/: Makefile  Makefile.am
test/data/: Makefile
test/src/: Makefile  eq2gc.c  segment_overlap.c
www/: css  html
(+5757 files in other folders)
